# quantiv

./: .gitignore  README.md  pyproject.toml
src/quantiv/: __init__.py  stock_prediction.py  test_main.py
src/quantiv/api/: main.py
src/quantiv/data/: features.py  loader.py
src/quantiv/models/: regression.py
src/quantiv/pipeline/: pipeline.py
src/quantiv/utils/: logger.py
