[project]
name = "quantiv"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Sunil Chekuri", email = "chekurisunil20@gmail.com" }
]
requires-python = ">=3.11"
dependencies = [
    "numpy",
    "pandas",
    "scipy",
    "scikit-learn",
    "yfinance",
    "matplotlib",
    "fastapi",
    "uvicorn"
]

[build-system]
requires = ["uv_build>=0.10.11,<0.11.0"]
build-backend = "uv_build"
